added the rhyming.js

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="rapbot.css">
+  <script type="text/javascript" src="rhyming.js"></script>
   <title>Rapbot</title>
 </head>
 <body>
   <h1>This is Rapbot</h1>
   <p>
     Stay tuned for the sickest rhymes coming straight outta Honeypot HQ...
+  </p>
+  <p>
+    For now, how about you try some rhyming yourself?
+    <p id="wordList">
+    </p>
   </p>
 </body>
 </html>
