changed prompt to form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <p>
     Stay tuned for the sickest rhymes coming straight outta Honeypot HQ...
   </p>
+  <form id="form">
+    <input type="text" name="word">
+    <input type="submit" value="Get me rhyming words">
+  </form>
   <p>
     For now, how about you try some rhyming yourself?
     <p id="wordList">
