Error handling & Previous rhymes list

--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
   <p>
     Stay tuned for the sickest rhymes coming straight outta Honeypot HQ...
   </p>
+  <p id="error">
+    Get your words straight mofo!
+  </p>
   <form id="form">
     <input type="text" name="word">
     <input type="submit" value="Get me rhyming words">
   </form>
-  <p>
-    For now, how about you try some rhyming yourself?
-    <p id="wordList">
-    </p>
-  </p>
+  <p>For now, how about you try some rhyming yourself?</p>
+  <div id="wordList">
+
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="rhyming.js"></script>
 </body>
 </html>
