allow multi word input, changed colour to highlight rhyming word

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   </p>
   <form id="form">
     <input type="text" name="word">
-    <input type="submit" value="Get me rhyming words">
+    <input type="submit" value="Spit some rhymes brother">
   </form>
   <p>For now, how about you try some rhyming yourself?</p>
   <div id="wordList">
 
   </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="rhyming.js"></script>
 </body>
