Adds some swagg images

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
   </div>
 
+  <div class="images">
+    <img src="images/notorious_b_i_g_by_nidayeah-d3hvkli.png" alt="">
+    <img src="images/music-eminem.png" alt="">
+    <img src="images/tumblr_mhkrs3SyT71rptilyo1_500.jpg" alt="">
+    <img src="images/rakim_by_fungila-d6xx84k.png" alt="">
+    <img src="images/Snoop-Dogg-Sketch.png" alt="">
+  </div>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="rhyming.js"></script>
 </body>
