--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
     <img src="images/notorious_b_i_g_by_nidayeah-d3hvkli.png" alt="">
     <img src="images/music-eminem.png" alt="">
     <img src="images/tumblr_mhkrs3SyT71rptilyo1_500.jpg" alt="">
-    <img src="images/rakim_by_fungila-d6xx84k.png" alt="">
+    <img src="images/ice-cube.png" alt="">
     <img src="images/Snoop-Dogg-Sketch.png" alt="">
+    <img src="images/rakim_by_fungila-d6xx84k.png" alt="">
+    <img src="images/Eazy-E.gif" alt="">
+    <img src="images/jay-z-cartoon.png" alt="">
+    <img src="images/Rapbear.png" alt="">
+    <img src="images/kanye.jpg" alt="">
+    <img src="images/dr_dre_vector.jpg" alt="">
+    <img src="images/nas-nas.gif" alt="">
+    <img src="images/kendrick-lamar.jpg" alt="">
+    <img src="images/lauryn-hill.jpg" alt="">
+    <img src="images/j-Cole.jpg" alt="">  
   </div>
+
+  
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
