Adding the slackForm to the HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <p id="error">
     Get your words straight mofo!
   </p>
+  <form id="slackForm">
+    <input id="token" type="text" name="token">
+    <input type="submit" value="Post To Slack">
+  </form>
+
   <form id="form">
     <input type="text" name="word">
     <input type="submit" value="Spit some rhymes brother">
