--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     Get your words straight mofo!
   </p>
   <form id="slackForm">
-    <input id="token" type="text" name="token">
+    <input type="text" name="user" placeholder="Slack Username">
+    <input id="token" type="text" name="token" placeholder="Slack Token">
     <input type="submit" value="Post To Slack">
   </form>
 
