--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js"></script>
   <script type="text/javascript" src="rhyming.js"></script>
 </body>
 </html>
